WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232890
[Monterey] TestWebKitAPI.PrivateClickMeasurement.Daemon* tests timing out: Failed to connect to mach service org.webkit.pcmtestdaemon.service
https://bugs.webkit.org/show_bug.cgi?id=232890
Summary
[Monterey] TestWebKitAPI.PrivateClickMeasurement.Daemon* tests timing out: Fa...
Ryan Haddad
Reported
2021-11-09 09:57:37 PST
The following two tests are timing out on Monterey bots with the message: "Failed to connect to mach service org.webkit.pcmtestdaemon.service, reason: failed at lookup with error 3 - No such process". This has been happening since the Monterey queues were brought up. TestWebKitAPI.PrivateClickMeasurement.DaemonBasicFunctionality TestWebKitAPI.PrivateClickMeasurement.DaemonDebugMode
https://build.webkit.org/#/builders/365/builds/35/steps/17/logs/stdio
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.PrivateClickMeasurement.DaemonBasicFunctionality&test=TestWebKitAPI.PrivateClickMeasurement.DaemonDebugMode
Attachments
Patch
(17.63 KB, patch)
2021-12-18 15:25 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-11-09 09:58:30 PST
<
rdar://problem/85207672
>
Ryan Haddad
Comment 2
2021-11-17 15:46:29 PST
Disabled tests in
r285962
Alex Christensen
Comment 3
2021-11-18 13:01:48 PST
OSLaunchdJob.submit is returning this error: Error Domain=OSLaunchdErrorDomain Code=144 "Requestor lacks required entitlement" UserInfo={NSLocalizedFailureReason=Requestor lacks required entitlement} Relevant, from building: Code Signing Warning: "TestWebKitAPI" isn't code signed but requires entitlements. It is not possible to add entitlements to a binary without signing it.
Alex Christensen
Comment 4
2021-12-18 15:08:58 PST
***
Bug 234482
has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 5
2021-12-18 15:25:10 PST
Created
attachment 447533
[details]
Patch
Brady Eidson
Comment 6
2021-12-18 17:21:51 PST
Comment on
attachment 447533
[details]
Patch You made the changes to both adattributiond and webpushd tests, but left the webpush tests disabled. Could you enable them and go through another EWS pass? R+ with that.
Alex Christensen
Comment 7
2021-12-18 18:55:56 PST
Comment on
attachment 447533
[details]
Patch They seem to need some more work to get them working, though I'm confident this was a step in the right direction.
EWS
Comment 8
2021-12-18 19:39:18 PST
Committed
r287234
(
245394@main
): <
https://commits.webkit.org/245394@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447533
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug